[project]
name = "chest-x-ray-diagnosis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "mlflow>=2.20.1",
    "opencv-python>=4.11.0.86",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
